2010-06-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync from GCC:

	PR bootstrap/44621
	* configure.ac: Fix unportable shell quoting.
	* configure: Regenerate.

2010-07-17  Jack Howarth  <howarth@bromo.med.uc.edu>

	PR target/44862
	* Makefile.tpl (POSTSTAGE1_CXX_EXPORT):
	Provide -B option to allow for link spec %s substitutions for
	libstdc++.a on darwin.
	* Makefile.in: Regenerate.

2010-06-10  Alexandre Oliva  <aoliva@redhat.com>

	* Makefile.def (configure-gcc): Depend on all-libelf.
	* Makefile.in: Rebuild.

2010-06-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* config.sub, config.guess: Update from upstream sources.

2010-06-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Sync from GCC:

	2010-05-05  Sebastian Pop  <sebastian.pop@amd.com>
	* configure.ac: Allow all the versions greater than 0.10 of PPL.
	* configure: Regenerated.

	2010-04-20  Eric Botcazou  <ebotcazou@adacore.com>
	* configure.ac (BUILD_CONFIG): Redirect output to /dev/null.
	* configure: Regenerate.

	2010-04-17  Ralf Cors<E9>pius  <ralf.corsepius@rtems.org>
	* configure.ac (*-*-rtems*): Add target-libiberty to $skipdirs.
	* configure: Regenerate.

	2010-04-16  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
	* configure.ac: Check for elf_getshdrstrndx or elf_getshstrndx
	separately.
	* configure: Regenerate.

	2010-04-13  Steve Ellcey  <sje@cup.hp.com>
	* configure: Regenerate after change to elf.m4.

	2010-04-02  Sebastian Pop  <sebastian.pop@amd.com>
	* configure.ac: Add brackets around AC_TRY_COMPILE alternative.
	* configure: Regenerated.

	2010-04-02  Sebastian Pop  <sebastian.pop@amd.com>
	* configure.ac: Print "buggy but acceptable" when CLooG
	revision is less than 9.
	* configure: Regenerated.

2010-05-26  Dave Korn  <dave.korn.cygwin@gmail.com>

	Merge from gcc:

	2010-05-18  Steven Bosscher  <steven@gcc.gnu.org>
	* configure.ac (--enable-lto): All *-apple-darwin* now support LTO.
	* configure: Regenerate.

	2010-05-07  Steven Bosscher  <steven@gcc.gnu.org>